Update Fontawesome code

--- a/faqs.html
+++ b/faqs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybiltec.com/fontawesome/js/029ff40d7b.js"></script>
+        <script src="https://kit.fontawesome.com/029ff40d7b.js" crossorigin="anonymous"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -34,7 +34,7 @@
                 "name": "What are the differences between Shopify and WooCommerce?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "Please read my blog article on <a href='https://sybiltec.com/shopify-woocommerce'>Shopify vs WooCommerce: What Are the Differences?</a> which compares the world's two most popular e-commerce platforms."
+                  "text": "Please read my blog article on Shopify vs WooCommerce: What Are the Differences? which compares the world's two most popular e-commerce platforms."
                 }
               }, {
                 "@type": "Question",
@@ -56,7 +56,7 @@
                 "name": "How do I update my WordPress website?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"Please take a look at my blog post: <a href='https://sybiltec.com/guide-to-updating-your-wordpress-website'>A Guide to Updating Your WordPress Website</a>."
+                    "text":"Please take a look at my blog post: A Guide to Updating Your WordPress Website."
                 }
             }, {
                 "@type": "Question",
@@ -70,7 +70,7 @@
                 "name": "What services do you offer?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"The services I offer are: <a href='https://sybiltec.com/website-review'>website review</a>, <a href='https://sybiltec.com/website-design'>website design</a>, <a href='https://sybiltec.com/website-development'>website development</a>, <a href='https://sybiltec.com/website-maintenance'>website maintenance</a>, <a href='https://sybiltec.com/training'>training</a> and <a href='https://sybiltec.com/leaflet-design'>leaflet design</a>."
+                    "text":"The services I offer are: website review, website design, website development, website maintenance, training and leaflet design."
                 }
             }, {
                 "@type": "Question",
@@ -105,7 +105,7 @@
                 "name": "How much does a full website build cost?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "This would very much depend on the requirements of the project. Please <a href='https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd' target='_blank' rel='noopener noreferrer'>get in touch</a> with me to arrange an initial consultation, after which I can provide a detailed and accurate quote for you."
+                  "text": "This would very much depend on the requirements of the project. Please get in touch with me to arrange an initial consultation, after which I can provide a detailed and accurate quote for you."
                 }
               }, {
                 "@type": "Question",
@@ -126,7 +126,7 @@
                 "name": "What can I expect from the website design process?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "You can read about my complete website design process in my blog post, <a href='https://sybiltec.com/web-design-process-explained-12-easy-steps'>The Web Design Process Explained in 12 Easy Steps</a>."
+                  "text": "You can read about my complete website design process in my blog post, The Web Design Process Explained in 12 Easy Steps."
                 }
               }, {
                 "@type": "Question",
@@ -140,7 +140,7 @@
                 "name": "Can I see examples of your previous work?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "Of course, please see the <a href='https://sybiltec.com/website-design'>Website Design</a> page for examples of web design projects I have completed for past clients."
+                  "text": "Of course, please see the Website Design page for examples of web design projects I have completed for past clients."
                 }
               }, {
                 "@type": "Question",
@@ -154,7 +154,7 @@
                 "name": "What payment methods do you accept?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "I accept payments via bank transfer for all services. If you would like to purchase one of my website maintenance services, you can also do so directly via the <a href='https://sybiltec.com/website-maintenance'>Website Maintenance</a> page. All major debit and credit cards are accepted."
+                  "text": "I accept payments via bank transfer for all services. If you would like to purchase one of my website maintenance services, you can also do so directly via the Website Maintenance page. All major debit and credit cards are accepted."
                 }
               }, {
                 "@type": "Question",
@@ -168,7 +168,7 @@
                 "name": "I cannot find the answer to my question in these FAQs. How can I contact you?",
                 "acceptedAnswer": {
                   "@type": "Answer",
-                  "text": "Please contact me <a href='https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd' target='_blank' rel='noopener noreferrer'>here</a>. I look forward to hearing from you."
+                  "text": "Please contact me. I look forward to hearing from you."
                 }
               }
                 
@@ -298,12 +298,12 @@
                 <h3>What services do you offer?</h3>
                 <p>The services I offer are:</p>
                 <ul>
-                    <li><a href="https://sybiltec.com/website-review">Website review</a></li>
-                    <li><a href="https://sybiltec.com/website-design">Website design</a></li>
-                    <li><a href="https://sybiltec.com/website-development">Website development</a></li>
-                    <li><a href="https://sybiltec.com/website-maintenance">Website maintenance</a></li>
-                    <li><a href="https://sybiltec.com/training">Training</a></li>
-                    <li><a href="https://sybiltec.com/leaflet-design">Leaflet design</a></li>
+                    <li>Website review</li>
+                    <li>Website design</li>
+                    <li>Website development</li>
+                    <li>Website maintenance</li>
+                    <li>Training</li>
+                    <li>Leaflet design</li>
                 </ul>
 
                 <h3>Which platforms do you work with?</h3>
@@ -358,7 +358,7 @@
                 <p>My most recent qualification is an MSc in Computer Science from the University of Kent.</p>
 
                 <h3>I cannot find the answer to my question in these FAQs. How can I contact you?</h3>
-                <p>Please contact me <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank" rel="noopener noreferrer">here</a>. I look forward to hearing from you.</p>
+                <p>Please contact me. I look forward to hearing from you.</p>
             </div>
         </div>
         <div class="contact section">
