--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybiltec.com/fontawesome/js/029ff40d7b.js"></script>
+        <script src="https://kit.fontawesome.com/029ff40d7b.js" crossorigin="anonymous"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -43,7 +43,7 @@
             
             var ml_account = ml('accounts', '2216689', 'x9i7o3w7n4', 'load');
         </script>
-        <!-- End MailerLite Universal -->    
+        <!-- End MailerLite Universal --> 
     </head>
     <body>
         <div class="header">
@@ -385,19 +385,19 @@
                         <a href="http://www.fsb.org.uk/" target="_blank" rel="noreferrer noopener"><img src="images/logos/fsb-member-logo-PNG.webp" alt="Visit FSB's website"></a>
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/shopify-partners.png" alt="Shopify Partners">
+                        <img src="images/logos/shopify-partners.png" alt="Shopify Partners logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/wix.png" alt="Wix">
+                        <img src="images/logos/wix.png" alt="Wix logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/wordpress.png" alt="WordPress">
+                        <img src="images/logos/wordpress.png" alt="WordPress logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/cnt-associates.png" alt="CNT Associates">
+                        <img src="images/logos/cnt-associates.png" alt="CNT Associates logo">
                     </div>
                     <div class="col-2">
-                        <img src="images/logos/bigcommerce-logo.jpg" alt="BigCommerce">
+                        <img src="images/logos/bigcommerce-logo.jpg" alt="BigCommerce logo">
                     </div>
                 </div>
             </div>
