--- a/website-development.html
+++ b/website-development.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script defer src="https://sybiltec.com/fontawesome/js/029ff40d7b.js"></script>
+        <script src="https://kit.fontawesome.com/029ff40d7b.js" crossorigin="anonymous"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
@@ -160,27 +160,6 @@
                         </div>
                     </div>
                 </div>
-
-            <!-- <div id="pendle-witch-company" class="shadow-box-2">
-                <div class="row-2">
-                    <div class="col-5">
-                        <img src="https://sybiltec.com/images/clients/The-Pendle-Witch-Company-2.jpg" alt="The Pendle Witch Company">
-                    </div>
-                    <div class="col-7">
-                        <h2>The Pendle Witch Company</h2>
-                        <h3 style="font-size: 18px;">A range of beautifully crafted tools and DIY kits to assist you on your witchy journey</h3>
-                        <ul>
-                            <li>Design improvements</li>
-                            <li>Theme customisations</li>
-                            <li>Facebook Shop and Instagram Shop connection</li>
-                        </ul>
-                        <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://pendlewitchcompany.com/" 
-                            target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             
             <div id="together-matters" class="shadow-box-2">
                 <div class="row-2">
@@ -248,44 +227,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- <div id="tristarspas" class="shadow-box-2">
-                <div class="row-2">
-                    <div class="col-5">
-                        <img src="https://sybiltec.com/images/clients/Tristarspas.jpg" alt="Tristarspas">
-                    </div>
-                    <div class="col-7">
-                        <h2>Tristarspas</h2>
-                        <h3 style="font-size: 18px;">Spas and hot tubs</h3>
-                        <ul>
-                            <li>Design improvements</li>
-                            <li>Theme customisations</li>
-                        </ul>
-                    </div>
-                </div>
-            </div> -->
-
-            <!-- <div id="x-blu" class="shadow-box-2">
-                <div class="row-2">
-                    <div class="col-5">
-                        <img src="https://sybiltec.com/images/clients/x-blu.JPG" alt="x-blu">
-                    </div>
-                    <div class="col-7">
-                        <h2>x-blu</h2>
-                        <h3 style="font-size: 18px;">Avant-garde punkists play out like Joy Division meets Nico</h3>
-                        <ul>
-                            <li>Website development</li>
-                            <li>Mailchimp setup</li>
-                            <li>Google Analytics setup</li>
-                            <li>Google Search Console submission</li>
-                        </ul>
-                        <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://x-blu.com" 
-                            target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
 
             <div id="events-meets-world" class="shadow-box-2">
                 <div class="row-2">
@@ -374,27 +315,6 @@
                     </div>
                 </div>
             </div>                
-
-            <!-- <div id="audrey-zeitoun-coaching" class="shadow-box-2">                         
-                <div class="row-2">
-                    <div class="col-5">   
-                        <img src="https://sybiltec.com/images/clients/Audrey-Zeitoun-Coaching-2.jpg" alt="Audrey Zeitoun Coaching">                         
-                    </div>
-                    <div class="col-7">
-                        <h2>Audrey Zeitoun Coaching</h2>
-                        <h3 style="font-size: 18px;">Relationship coaching, divorce coaching and family communication coaching </h3>
-                        <ul>
-                            <li>Website development</li>
-                            <li>MailerLite integration</li>
-                            <li>Google Search Console submission</li>
-                        </ul>
-                         <div class="padding-btn">
-                            <a class ="btn-secondary" href="https://www.audreyzcoaching.com"
-                            target="_blank" rel="noopener noreferrer">View Client</a>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
 
             <div id="blue-horizon-lnw" class="shadow-box-2">                         
                 <div class="row-2">
