--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script src="https://kit.fontawesome.com/029ff40d7b.js" crossorigin="anonymous"></script>
+        <script defer src="https://sybiltec.com/fontawesome/js/029ff40d7b.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVK8SSNQSC"></script>
         <script>
