--- a/faqs.html
+++ b/faqs.html
@@ -231,7 +231,7 @@
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a>
+                                        <a href="https://sybiltec.com/contact" target="_blank">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -308,7 +308,7 @@
                 <p>My clients are primarily based in London, but as I operate on a remote working basis I can serve clients anywhere in the UK, or in fact anywhere in the world!</p>
 
                 <h3>How much does a full website build cost?</h3>
-                <p>This would very much depend on the requirements of the project. Please <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank" rel="noopener noreferrer">get in touch</a> with me to arrange an initial consultation, after which I can provide a detailed and accurate quote for you. </p>
+                <p>This would very much depend on the requirements of the project. Please <a href="https://sybiltec.com/contact" target="_blank" rel="noopener noreferrer">get in touch</a> with me to arrange an initial consultation, after which I can provide a detailed and accurate quote for you. </p>
 
                 <h3>How long does it take to build a full website?</h3>
                 <p>The time it takes to complete the work would depend on the complexity of the project. A 5-page website could be completed in as little as 4 weeks depending on how quickly I receive the required information. In order for the work to be completed as soon as possible, please provide the required information promptly. An estimated timeframe for completion of the project can be discussed during our initial call.</p>
@@ -358,7 +358,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact" target="_blank">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -370,7 +370,7 @@
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank">Contact</a></p>
+                        <p><a href="https://sybiltec.com/contact" target="_blank">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
@@ -383,7 +383,7 @@
                     <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="https://us5.list-manage.com/contact-form?u=0faa041c3b4e79909716dd256&form_id=e1c8f76dbb1507fc5caa25324e7047dd" target="_blank"><i class="far fa-envelope"></i></a>
+                            <a href="https://sybiltec.com/contact" target="_blank"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
