Add Bexley Talking Business

--- a/blog.html
+++ b/blog.html
@@ -84,10 +84,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
+                    <h2>Bexley Talking Business</h2>
+                    <p>Are you an SME or sole trader based in Bexley? Do you need help with running your business? If so, you may be eligible for free business support. Register now for the programme …</p>
+                    <br>
+                    <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>
+                <div class="padding-top">
                     <h2>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h2>
                     <p>A fast loading WordPress site is essential for good user experience and SEO. In this blog post we discuss 10 steps you can take to maximise your site's speed. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/fix-slow-wordpress-website">Fix My Site!</a>
+                </div>
                 <div class="padding-top">
                     <h2>How to Install GA4 on Your WordPress Website</h2>
                     <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding. …</p>
@@ -110,7 +116,7 @@
                     <h2>How Do I Upgrade to Google Analytics 4?</h2>
                     <p>If you are using Google Analytics, you may be aware that there is a new version of Analytics called GA4. The current version, which is Universal Analytics, will stop processing new data on 1st July 2023, so you need to upgrade to GA4 before this date. Not sure which version of Google …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/upgrade-google-analytics-4">Upgrade GA Now</a>
                 </div>
                 <div class="padding-top">
                     <h2>Shopify vs WooCommerce: What Are the Differences?</h2>
@@ -128,7 +134,7 @@
                     <h2>A Guide to Updating Your WordPress Website</h2>
                     <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
                     <br>
-                    <a class="btn-primary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website">Read More</a>
+                    <a class="btn-primary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website">Update WordPress</a>
                 </div>
                 <div class="padding-top">
                     <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
