--- a/index.html
+++ b/index.html
@@ -315,6 +315,21 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">  
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/bexley-talking-business">
+                                <img src="images/logos/TB-Business-Support.png" 
+                                alt="Bexley Talking Business - Business Support"></a>
+                            <div class="blog-card-text">                    
+                                <h3>Bexley Talking Business</h3>
+                                <p>14 December 2023</p>
+                                <p>If you are an SME/sole trader based in Bexley, you may be eligible for free business support. Start your registration now.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/bexley-talking-business">Get Business Support</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/web-design-process-explained-12-easy-steps"><img src="https://sybiltec.com/images/mr-bean-waiting-350x183.png" 
@@ -343,21 +358,6 @@
                             </div>
                         </div>
                     </div> 
-                    <div class="col-4">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/shopify-woocommerce">
-                                <img src="images/shopify-vs-woocommerce.jpg" 
-                                alt="Shopify vs WooCommerce"></a>
-                            <div class="blog-card-text">                    
-                                <h3>Shopify vs WooCommerce: What Are the Differences?</h3>
-                                <p>11 June 2023</p>
-                                <p>Read this article to learn about the two most popular e-commerce platforms and help you choose the best option for your business.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/shopify-woocommerce">Read Blog</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
             <div class="center padding-bottom padding-top">
