--- a/faqs.html
+++ b/faqs.html
@@ -379,6 +379,8 @@
                             data-account="2216689:x9i7o3w7n4"
                             data-form="5270027:e5c2j0">
                         </div>
+                        <h4>Address</h4>
+                        <p>The Engine House Bexley,<br>2 Veridion Way,<br>Erith DA18 4AL</p>
                     </div>
                     <div class="col-4">
                         <h4>Get in Touch</h4>
