Prevent contact.html from opening in a new tab

--- a/how-does-a-good-website-showcase-trust.html
+++ b/how-does-a-good-website-showcase-trust.html
@@ -83,7 +83,7 @@
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact" target="_blank">Contact</a>
+                                        <a href="https://sybiltec.com/contact">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -122,7 +122,7 @@
                 <h2>5. Website Security</h2>
                 <p>Does your website's URL begin with <strong>http://</strong> rather than <strong>https://</strong>? If so, your website is missing an SSL certificate. An SSL certificate reassures your customers that their data is safe on your website. Without one, your website exposes your customer's data, making it vulnerable to cyberattacks.</p>
 
-                <p>If your website is built on WordPress, keep plugins, themes and core files updated for maximum security. For support with ongoing maintenance of your website, please <a href="https://sybiltec.com/contact" target="_blank">contact us</a> for further details about our website maintenance services.</p>
+                <p>If your website is built on WordPress, keep plugins, themes and core files updated for maximum security. For support with ongoing maintenance of your website, please <a href="https://sybiltec.com/contact">contact us</a> for further details about our website maintenance services.</p>
 
                 <h2>6. Data Protection</h2>
                 <p>At the very least, your website must include a privacy notice. A transparent privacy notice includes how customer data is obtained, what the data is used for, where it is stored, how long it is retained for and your complaints procedure. If your website uses cookies, you should also include a cookie policy. We can support you with creating a compliant privacy notice and cookie policy.</p>
@@ -137,7 +137,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact" target="_blank">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -149,7 +149,7 @@
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact" target="_blank">Contact</a></p>
+                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
@@ -164,7 +164,7 @@
                     <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="https://sybiltec.com/contact" target="_blank"><i class="far fa-envelope"></i></a>
+                            <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
