--- a/shopify-woocommerce.html
+++ b/shopify-woocommerce.html
@@ -84,7 +84,7 @@
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact" target="_blank">Contact</a>
+                                        <a href="https://sybiltec.com/contact">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -154,7 +154,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact" target="_blank">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -166,7 +166,7 @@
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact" target="_blank">Contact</a></p>
+                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
@@ -181,7 +181,7 @@
                     <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="https://sybiltec.com/contact" target="_blank"><i class="far fa-envelope"></i></a>
+                            <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
