--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -83,7 +83,7 @@
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
                                         <a href="https://sybiltec.com/blog">Blog</a>
-                                        <a href="https://sybiltec.com/contact" target="_blank">Contact</a>
+                                        <a href="https://sybiltec.com/contact">Contact</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
                                         </a>
@@ -192,7 +192,7 @@
 
                 <h2>Conclusion</h2>
 
-                <p>Several factors can impact the speed of a WordPress website. A fast loading site is essential for a good user experience and also improves search engine optimisation. In this blog post I discussed 10 steps you can take to minimise this impact, ensuring that your website is as fast as possible. If you need help with any of the above, please feel free to <a href="https://sybiltec.com/contact" target="_blank" rel="noreferrer noopener">contact me</a>. </p>
+                <p>Several factors can impact the speed of a WordPress website. A fast loading site is essential for a good user experience and also improves search engine optimisation. In this blog post I discussed 10 steps you can take to minimise this impact, ensuring that your website is as fast as possible. If you need help with any of the above, please feel free to <a href="https://sybiltec.com/contact">contact me</a>. </p>
 
                 <h2>References</h2>
 
@@ -208,7 +208,7 @@
                         <p>Click the contact button to get in touch with your requirements</p>
                     </div>
                     <div class="col-4">
-                        <a class="btn-primary" href="https://sybiltec.com/contact" target="_blank">Contact Me</a>
+                        <a class="btn-primary" href="https://sybiltec.com/contact">Contact Me</a>
                     </div>
                 </div>
                 </div>
@@ -220,7 +220,7 @@
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about">About</a></p>
-                        <p><a href="https://sybiltec.com/contact" target="_blank">Contact</a></p>
+                        <p><a href="https://sybiltec.com/contact">Contact</a></p>
                         <p><a href="https://sybiltec.com/terms-and-conditions">Terms and Conditions</a></p>
                         <p><a href="https://sybiltec.com/uploads/privacy-policy-v3.pdf" target="_blank">Privacy Policy</a></p>
                     </div>
@@ -235,7 +235,7 @@
                     <div class="col-4">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="https://sybiltec.com/contact" target="_blank"><i class="far fa-envelope"></i></a>
+                            <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
                             <a href="https://linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec" target="_blank" rel="noopener noreferrer">
