--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -51,7 +51,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -72,7 +72,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -96,7 +95,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p><strong>Date published: 29 September 2020</strong></p>
+                <p>Date published: 29 September 2020</p>
                 <p>Are you planning to sell your products or services online? Consider choosing 
                     <a href="https://shopify.co.uk" target="_blank" rel="noopener noreferrer">
                         Shopify</a>, one of the most popular e-commerce platforms. Here I present to 
