--- a/clients.html
+++ b/clients.html
@@ -40,7 +40,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -61,7 +61,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -98,7 +97,7 @@
                     <div class="row center" style="padding:0">
                         <div class="col-3" style="padding:0"><img src="images/logos/crazy-thumbs.png" alt="Crazy Thumbs"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/emrys-consulting.svg" alt="Emrys Consulting"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/encalife.png" alt="encalife"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/encalife.png" alt="encalife logo"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/esme-learning.png" alt="Esme Learning"></div>
                         
                     </div>
@@ -109,20 +108,20 @@
                         <div class="col-3" style="padding:0"><img src="images/logos/the-gdpr-compliance-consultancy.png" alt="The GDPR Compliance Consultancy"></div>
                     </div>
                     <div class="row center" style="padding:0">
-                        <div class="col-3" style="padding:0"><img src="images/logos/gll.png" alt="GLL"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/gll.png" alt="GLL logo"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/global-banking-school.png" alt="Global Banking School"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/happily-clappily-ever-laughter.png" alt="Happily Clappily Ever Laughter"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/jenup.png" alt="JenUp"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/jenup.png" alt="JenUp logo"></div>
                     </div>
                     <div class="row center" style="padding:0">
                         <div class="col-3" style="padding:0"><img src="images/logos/meitam-london.png" alt="Meitam London"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/nerowireart-2.png" alt="NeroWireArt"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/nerowireart-2.png" alt="NeroWireArt logo"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/new-haw-community-centre.png" alt="New Haw Community Centre"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/pathways-21.png" alt="Pathways 21"></div>
                     </div>
                     <div class="row center" style="padding:0">
                         <div class="col-3" style="padding:0"><img src="images/logos/the-pendle-witch-company.png" alt="The Pendle Witch Company"></div>
-                        <div class="col-3" style="padding:0"><img src="images/logos/tizane.png" alt="Tizane"></div>
+                        <div class="col-3" style="padding:0"><img src="images/logos/tizane.png" alt="Tizane logo"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/together-matters.png" alt="Together Matters"></div>
                         <div class="col-3" style="padding:0"><img src="images/logos/wardells-wardrobe.png" alt="Wardell's Wardrobe"></div>
                     </div>
