--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -57,7 +57,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -78,7 +78,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -101,7 +100,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p><strong>Date published: 10 April 2023</strong></p>
+                <p>Date published: 10 April 2023</p>
 
                 <h2>Why Contact Information is Important</h2>
 
