--- a/shopify-woocommerce.html
+++ b/shopify-woocommerce.html
@@ -58,7 +58,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -79,7 +79,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -101,7 +100,7 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <p><strong>Date published: 11 June 2023</strong></p>
+                <p>Date published: 11 June 2023</p>
 
                 <h2>Introduction</h2>
                 <p><a href="https://sybiltec.com/6-reasons-to-use-shopify">Shopify</a> and WooCommerce are two of the most popular e-commerce platforms today, but how do they compare? In this article we will examine the pros and cons of both, helping you to decide which is the best choice for your requirements.</p>
