--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -60,7 +60,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
