--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -61,7 +61,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -173,7 +172,7 @@
                                 <img src="images/clients/Emrys-Consulting-2.jpg" alt="Emrys Consulting">
                             </div>
                             <div class="myPortfolio fade">
-                                <img src="images/clients/NeroWireArt-2.jpg" alt="NeroWireArt">
+                                <img src="images/clients/NeroWireArt-2.jpg" alt="NeroWireArt website">
                             </div>
                             <div class="myPortfolio fade">
                                 <img src="images/clients/LD-Tiling-Contractors-2.jpg" alt="LD Tiling Contractors">
