--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -56,7 +56,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -77,7 +77,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -100,7 +99,7 @@
         <div class="main section">
             <div class="container-1140">
                 <h2>Google Analytics 4 Installation on WordPress</h2>
-                <p><strong>Date published: 19 June 2023</strong></p>
+                <p>Date published: 19 June 2023</p>
 
                 <p>Ensure that your WordPress website is not password-protected or in maintenance mode before proceeding.</p>
 
