--- a/website-design.html
+++ b/website-design.html
@@ -40,7 +40,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -61,7 +61,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -156,7 +155,7 @@
                 <div id="encalife" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/encalife-2.jpg" alt="encalife">
+                            <img src="https://sybiltec.com/images/clients/encalife-2.jpg" alt="encalife website">
                         </div>
                         <div class="col-7">
                             <h2>Encalife</h2>
@@ -194,7 +193,7 @@
                 <div id="nerowireart" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/NeroWireArt-2.jpg" alt="NeroWireArt">
+                            <img src="https://sybiltec.com/images/clients/NeroWireArt-2.jpg" alt="NeroWireArt website">
                         </div>
                         <div class="col-7">
                             <h2>NeroWireArt</h2>
@@ -252,7 +251,7 @@
                 <div id="swipsearch" class="shadow-box-2">                         
                     <div class="row-2">
                         <div class="col-5">   
-                            <img src="https://sybiltec.com/images/clients/SwipSearch-2.jpg" alt="SwipSearch">                         
+                            <img src="https://sybiltec.com/images/clients/SwipSearch-2.jpg" alt="SwipSearch website">                         
                         </div>
                         <div class="col-7">
                             <h2>SwipSearch</h2>
