--- a/website-development.html
+++ b/website-development.html
@@ -40,7 +40,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -61,7 +61,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -112,7 +111,7 @@
                 <div id="wanandco" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="images/clients/Wan-and-Co.jpg" alt="Wan&Co">
+                            <img src="images/clients/Wan-and-Co.jpg" alt="Wan&Co website">
                         </div>
                         <div class="col-7">
                             <h2>Wan&Co</h2>
@@ -134,7 +133,7 @@
                 <div id="jenup" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/jenup.jpg" alt="JenUp">
+                            <img src="https://sybiltec.com/images/clients/jenup.jpg" alt="JenUp website">
                         </div>
                         <div class="col-7">
                             <h2>JenUp</h2>
@@ -397,7 +396,7 @@
             <div id="kyosk" class="shadow-box-2">                         
                 <div class="row-2">
                     <div class="col-5">   
-                        <img src="https://sybiltec.com/images/clients/KYOSK.jpg" alt="KYOSK">                         
+                        <img src="https://sybiltec.com/images/clients/KYOSK.jpg" alt="KYOSK website">                         
                     </div>
                     <div class="col-7">
                         <h2>KYOSK</h2>
