--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -40,7 +40,7 @@
                     <div class="row">
                         <div class="col-2">
                             <div class="logo">
-                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec"></a>
+                                <a href="/"><img src="https://sybiltec.com/images/logos/sybiltec-logo-small.png" alt="Sybiltec logo small"></a>
                             </div>
                         </div>
                         <div class="col-10">
@@ -61,7 +61,6 @@
                                             </div>
                                           </div> 
                                         <a href="https://sybiltec.com/clients">Clients</a>
-                                        <!-- <a href="https://sybiltec.com/events">Events</a> -->
                                         <a href="https://sybiltec.com/about">About Me</a>
                                         <a href="https://sybiltec.com/projects">Projects</a>   
                                         <a href="https://sybiltec.com/faqs">FAQs</a>
@@ -190,7 +189,7 @@
             <div id="tizane" class="shadow-box-2">
                 <div class="row-2">
                     <div class="col-5">
-                        <img src="https://sybiltec.com/images/clients/Tizane-2.jpg" alt="Tizane">
+                        <img src="https://sybiltec.com/images/clients/Tizane-2.jpg" alt="Tizane website">
                     </div>
                     <div class="col-7">
                         <h2>Tizane</h2>
