Add new testimonials

--- a/index.html
+++ b/index.html
@@ -232,12 +232,28 @@
                 <div class="slideshow-container">
                     <!-- Full-width slides/quotes -->
                     <div class="mySlides fade">
-                        <q>I would highly recommend Sybil; she listens and completely understands what I am asking for.<br>Her knowledge of Shopify is excellent and knows how to implement what I need.</q>
+                        <q>As a first-time business owner, setting up a website felt like a challenge. But, Sybil made it look so effortless. She is a highly skilled website designer and assisted me in bringing my creative vision to life. I would recommend her to anyone wanting to build a website.</q>
                         <div class="center">
-                            <img src="images/logos/the-bamboo-wardrobe-logo.png" alt="The Bamboo Wardrobe logo">
+                            <img src="images/logos/wan&co.webp" alt="Wan&Co logo">
                         </div>
-                        <h4>Caroline Wardell</h4>
-                        <p class="center">Founder,<br>The Bamboo Wardrobe</p>
+                        <h4>Maddie</h4>
+                        <p class="center">Founder,<br>Wan&Co</p>
+                    </div>
+                    <div class="mySlides fade">
+                        <q>Great big thanks to Sybil for supporting Eat Club with its IT audit and further systems' migration. Sybil was professional and supported us through this journey, making sure everything was completed according to the original plan. Thank you also for your patience as this was not a straightforward project.</q>
+                        <div class="center">
+                            <img src="images/logos/eat-club.gif" alt="Eat Club logo">
+                        </div>
+                        <h4>Ruth Soroko</h4>
+                        <p class="center">Chief Executive,<br>Eat Club</p>
+                    </div>
+                    <div class="mySlides fade">
+                        <q>Sybil is a highly skilled developer whom I had the pleasure of working with on a small landing pages project. I would highly recommend Sybil to anyone in need of a professional-looking website, especially if they're unsure where to begin.</q>
+                        <h4>Hany Abdelkhalek</h4>
+                    </div>
+                    <div class="mySlides fade">
+                        <q>Sybil was reliable and really supportive throughout the making of my website. She was flexible and made sure she understood what I wanted to get out of my website and what my values were. She listened to my ideas for the design but also gave me clear information and advice, and suggested options I didn't know about. I am really happy with the final result and would wholeheartedly recommend Sybil to anyone who needs a website and wants it to have a professional look but is not sure where to start.</q>
+                        <h4>Aurore Lacabe</h4>
                     </div>
                     <div class="mySlides fade">
                         <q>The final product is sleek, clean and professional looking. Sybil listened, did not impose a 'manufactured easy to do template' webpage on us. She managed our expectations beautifully and delivered a service which is best characterised by 'above and beyond'. Sybil simply delivered; she certainly commits her knowledge, skill and innovative entrepreneurial mind to benefit for her customer.</q>
